second_block_info_start

--- a/index.html
+++ b/index.html
@@ -31,6 +31,38 @@
             </div>
         </div>
     </div>
+
+    <div class="info-start js-transform transform">
+        <div class="info-start__blocks">
+            <div class="info-start__block">
+                <span class="info-start__block-icon"></span>
+                <p class="info-start__block-desc">
+                    Ближайший старт
+                </p>
+                <p class="info-start__block-txt">
+                    12 сентября
+                </p>
+            </div>
+            <div class="info-start__block">
+                <span class="info-start__block-icon info-start__block-icon--2"></span>
+                <p class="info-start__block-desc">
+                    Длительность марафона
+                </p>
+                <p class="info-start__block-txt">
+                    4 недели
+                </p>
+            </div>
+            <div class="info-start__block">
+                <span class="info-start__block-icon info-start__block-icon--3"></span>
+                <p class="info-start__block-desc">
+                    Подарки в акции “Покори Алтай"
+                </p>
+                <p class="info-start__block-txt">
+                    Всем участникам
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
