third_block_Do_Vershini

--- a/index.html
+++ b/index.html
@@ -63,6 +63,37 @@
             </div>
         </div>
     </div>
+
+    <div class="info__wrapper info__wrapper--left info__wrapper--pink js-transform transform">
+        <div class="container container--info_left">
+            <div class="info info--left">
+                <div class="info-img__block js-transform transform">
+                </div>
+                <div class="info-block js-transform transform">
+                    <h3 class="title title--small">
+                        Достанем <span class="title__avatar"></span> <br>до вершины вместе! <span
+                            class="title__color title__color--3">с Lerchek</span>
+                    </h3>
+                    <div class="info-block__list">
+                        <div class="info-block__item js-transform transform">
+                            Эффективные тренировки для женщин и мужчин с<br> невероятными <b>видами на природу Алтая</b>
+                        </div>
+                        <div class="info-block__item js-transform transform">
+                            3 вида питания, в том числе новое <b>органическое меню</b>
+                        </div>
+                        <div class="info-block__item js-transform transform">
+                            <b>Каждый день</b> марафона - новый шаг к <b>экологичной и осознанной жизни</b>
+                        </div>
+                    </div>
+                    <div class=" transform js-transform">
+                        <a href="#" class="button js-scrollto">
+                            Участвовать в марафоне
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
