fourth_block_big_prizes

--- a/index.html
+++ b/index.html
@@ -94,6 +94,71 @@
             </div>
         </div>
     </div>
+
+    <div class="container js-transform transform">
+        <h2 class="title title--center js-transform transform">
+            Покажи лучший результат
+        </h2>
+        <p class="txt txt--center js-transform transform">
+            И выиграй &nbsp;<span class="txt--uppercase">крутейший джип <b style="white-space: nowrap">bmw
+                    x3</b></span>, iPhone 13 или один из 100 ценных призов
+        </p>
+        <div class="prize-big js-transform transform">
+            <div class="prize-big__blocks">
+                <div class="prize-big__block prize-big__block--1 js-transform transform">
+                    <picture>
+                        <source
+                            srcset="https://cdn.lerchek.fit/storage/altai/images/big_prize_mob.png 1x,https://cdn.lerchek.fit/storage/altai/images/big_prize_mob@2x.png 2x"
+                            media="(max-width: 768px)">
+                        <img src="./Марафон Алтай с Ler_chek_files/big_prize.png"
+                            srcset="https://cdn.lerchek.fit/storage/altai/images/big_prize@2x.png 2x" alt="img"
+                            class="prize-big__block-img prize-big__block-img--1">
+                    </picture>
+                    <p class="prize-big__block-name">
+                        100 других призов
+                    </p>
+                </div>
+                <div class="prize-big__block prize-big__block--2 js-transform transform">
+                    <picture>
+                        <source
+                            srcset="https://cdn.lerchek.fit/storage/altai/images/big_prize_2_mob.png 1x,https://cdn.lerchek.fit/storage/altai/images/big_prize_2_mob@2x.png 2x"
+                            media="(max-width: 768px)">
+                        <img src="./Марафон Алтай с Ler_chek_files/big_prize_2.png"
+                            srcset="https://cdn.lerchek.fit/storage/altai/images/big_prize_2@2x.png 2x" alt="img"
+                            class="prize-big__block-img prize-big__block-img--2">
+                    </picture>
+                    <p class="prize-big__block-name">
+                        BMW X3
+                    </p>
+                </div>
+                <div class="prize-big__block prize-big__block--3 js-transform transform">
+                    <picture>
+                        <source
+                            srcset="https://cdn.lerchek.fit/storage/altai/images/big_prize_3_mob.png 1x,https://cdn.lerchek.fit/storage/altai/images/big_prize_3_mob@2x.png 2x"
+                            media="(max-width: 768px)">
+                        <img src="./Марафон Алтай с Ler_chek_files/big_prize_3.png"
+                            srcset="https://cdn.lerchek.fit/storage/altai/images/big_prize_3@2x.png 2x" alt="img"
+                            class="prize-big__block-img prize-big__block-img--3">
+                    </picture>
+                    <p class="prize-big__block-name">
+                        iPhone 13
+                    </p>
+                </div>
+            </div>
+            <!-- <h3 class="title__white js-transform transform">
+                Главный приз
+            </h3>
+            <p class="txt__white js-transform transform">
+                Призовой фонд более 6.5 млн ₽
+            </p> -->
+            <div class="button__center js-transform transform">
+                <a href="https://lerchek.ru/#prices" class="button js-scrollto">
+                    Хочу выиграть приз
+                </a>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
