--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
     </div>
 
     <!-- CROUSEL -->
-
     <div class="carousel">
         <h3 class="title title--small title--center js-transform transform">
             Результаты участниц наших марафонов 💪
@@ -186,6 +185,119 @@
             </div>
         </div>
     </div>
+
+    <!-- Marathon BENEFITS -->
+    <div class="container container--eco js-transform transform">
+        <h2 class="title title--eco title--center js-transform transform">
+            Экопитание с заботой о здоровье и окружающей среде
+        </h2>
+        <div class="eco js-transform transform">
+            <div class="eco-blocks">
+                <div class="eco-block js-transform transform">
+                    <div class="eco-block__num">
+                        <span class="eco-block__num-icon"><b>1</b></span>
+                    </div>
+                    <div class="eco-block__info">
+                        <p class="eco-block__info-desc">
+                            Новое экологичное Алтайское меню этого марафона:
+                        </p>
+                        <ul class="eco-block__info-list">
+                            <li class="eco-block__info-item">
+                                Много сезонных овощей, зелени и салатов.
+                            </li>
+                            <li class="eco-block__info-item">
+                                Бюджетные продукты, которые легко найти в ближайшем супермаркете.
+                            </li>
+                            <li class="eco-block__info-item">
+                                Минимальная обработка продуктов для сохранения их пользы и витаминов.
+                            </li>
+                            <li class="eco-block__info-item">
+                                Рецепты Алтайских травяных чаев, морсов, кваса, домашнего хлеба, творога, сыра.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="eco-block js-transform transform">
+                    <div class="eco-block__num">
+                        <span class="eco-block__num-icon eco-block__num-icon--2"><b>2</b></span>
+                    </div>
+                    <div class="eco-block__info">
+                        <p class="eco-block__info-desc">
+                            3 плана питания на выбор:
+                        </p>
+                        <ul class="eco-block__info-list">
+                            <li class="eco-block__info-item">
+                                Новое <b>Алтайское меню</b>
+                            </li>
+                            <li class="eco-block__info-item">
+                                Наше популярное <b>меню ХИТ</b> с видеорецептами
+                            </li>
+                            <li class="eco-block__info-item">
+                                <b>Экспресс-меню</b> для тех, кто не хочет тратить много времени на готовку
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="eco-block js-transform transform">
+                    <div class="eco-block__num">
+                        <span class="eco-block__num-icon eco-block__num-icon--3"><b>3</b></span>
+                    </div>
+                    <div class="eco-block__info">
+                        <p class="eco-block__info-desc">
+                            Конструктор меню
+                        </p>
+                        <ul class="eco-block__info-list">
+                            <li class="eco-block__info-item">
+                                Составляйте свой рацион из понравившихся блюд, комбинируя рецепты из разных программ
+                                питания.
+                            </li>
+                            <li class="eco-block__info-item">
+                                Удобный поиск блюд по всем меню.
+                            </li>
+                            <li class="eco-block__info-item">
+                                Не нужно считать КБЖУ, все рационы автоматически рассчитываются в граммах по вашим
+                                параметрам и целям.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="eco-block js-transform transform">
+                    <div class="eco-block__num">
+                        <span class="eco-block__num-icon eco-block__num-icon--4"><b>4</b></span>
+                    </div>
+                    <div class="eco-block__info">
+                        <p class="eco-block__info-desc">
+                            Персонализированное мобильное приложение
+                        </p>
+                        <ul class="eco-block__info-list">
+                            <li class="eco-block__info-item">
+                                Доступно с любого устройства.
+                            </li>
+                            <li class="eco-block__info-item">
+                                Списки продуктов на неделю.
+                            </li>
+                            <li class="eco-block__info-item">
+                                Графики прогресса.
+                            </li>
+                            <li class="eco-block__info-item">
+                                Полезные интерактивные трекеры.
+                            </li>
+                            <li class="eco-block__info-item">
+                                Вопросы кураторам.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="button__center">
+            <a href="https://lerchek.ru/#prices" class="button js-scrollto">
+                Хочу на марафон
+            </a>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
