--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- BIG INFO -->
     <div class="info-big--wrapper">
         <div class="container">
             <div class="info-big">
@@ -290,11 +291,36 @@
                 </div>
             </div>
         </div>
-        <div class="button__center">
-            <a href="https://lerchek.ru/#prices" class="button js-scrollto">
-                Хочу на марафон
-            </a>
+    </div>
+    <div class="button__center">
+        <a href="#" class="button js-scrollto">
+            Хочу на марафон
+        </a>
+    </div>
+
+    <!-- BIG INFO #2 -->
+    <div class="info-big--wrapper info-big--wrapper_2 js-transform transform">
+        <div class="container">
+            <div class="info-big">
+                <h2 class="title__white">
+                    Жить по принципам экологичности
+                </h2>
+                <p class="txt__white">
+                    Каждую неделю марафона вы будете не только идти к стройному рельефному телу с помощью эффективных
+                    тренировок и вкусного питания, но и можете ввести в свою жизнь <b>экологичные привычки</b>, которые
+                    помогут сохранить здоровье вашей семьи, бережно относиться к ресурсам нашей планеты и жить более
+                    осознанно.
+                </p>
+                <div class="info-color__txt info-color__txt--blue">
+                    Марафон « Madinasreels»
+                </div>
+            </div>
         </div>
+    </div>
+    <div class="button__center js-transform transform">
+        <a href="#" class="button js-scrollto">
+            Хочу на марафон c вами
+        </a>
     </div>
 
 
