--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="info-block js-transform transform">
                     <h3 class="title title--small">
                         Достанем <span class="title__avatar"></span> <br>до вершины вместе! <span
-                            class="title__color title__color--3">с Lerchek</span>
+                            class="title__color title__color--3">с Madinka</span>
                     </h3>
                     <div class="info-block__list">
                         <div class="info-block__item js-transform transform">
@@ -153,7 +153,7 @@
                 Призовой фонд более 6.5 млн ₽
             </p> -->
             <div class="button__center js-transform transform">
-                <a href="https://lerchek.ru/#prices" class="button js-scrollto">
+                <a href="#" class="button js-scrollto">
                     Хочу выиграть приз
                 </a>
             </div>
@@ -323,6 +323,31 @@
         </a>
     </div>
 
+    <!-- CROUSEL -->
+    <div class="carousel">
+        <h3 class="title title--small title--center js-transform transform">
+            Отзывы участников
+        </h3>
+        <div class="container-carousel">
+            <input type="radio" name="slider" id="review-item-1" checked>
+            <input type="radio" name="slider" id="review-item-2">
+            <input type="radio" name="slider" id="review-item-3">
+            <div class="cards">
+                <label class="card" for="review-item-1" id="review-song-1">
+                    <img src="https://images.unsplash.com/photo-1530651788726-1dbf58eeef1f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=882&q=80"
+                        alt="song">
+                </label>
+                <label class="card" for="review-item-2" id="review-song-2">
+                    <img src="https://images.unsplash.com/photo-1559386484-97dfc0e15539?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80"
+                        alt="song">
+                </label>
+                <label class="card" for="review-item-3" id="review-song-3">
+                    <img src="https://images.unsplash.com/photo-1533461502717-83546f485d24?ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60"
+                        alt="song">
+                </label>
+            </div>
+        </div>
+    </div>
 
 </body>
 
