--- a/index.html
+++ b/index.html
@@ -349,6 +349,143 @@
         </div>
     </div>
 
+    <!-- PRICES -->
+    <div class="container js-transform transform" id="prices">
+        <h3 class="title title--small title--center js-transform transform">
+            Участвовать в марафоне 💪
+        </h3>
+        <p class="txt txt--center txt--price js-transform transform">
+            Выбирайте свой тариф, покупайте марафон, выигрывайте моментальные призы, призы за марафон и улучшайте свою
+            жизнь прямо сейчас!
+        </p>
+        <div class="prices js-transform transform" id="single">
+            <div class="price js-transform transform">
+                <div class="price__box"></div>
+                <div class="price__top">
+                    <span class="price__logo"></span>
+                    <span class="price__name">Женский</span>
+                    <p class="price__cost">
+                        2700 <span>₽</span>
+                    </p>
+                </div>
+                <div class="price-info">
+                    <ul class="price-info__list">
+                        <li class="price-info__item">
+                            Удобная онлайн-платформа ChekFit
+                        </li>
+                        <li class="price-info__item">
+                            Длительность марафона - 4 недели
+                        </li>
+                        <li class="price-info__item">
+                            3 плана питания
+                        </li>
+                        <li class="price-info__item">
+                            Программа из функционально-силовых, интенсивных и жиросжигающих тренировок на все группы
+                            мышц для новичков и продвинутых.
+                        </li>
+                        <li class="price-info__item">
+                            Трекеры полезных привычек
+                        </li>
+                        <li class="price-info__item">
+                            Персональная поддержка куратора
+                        </li>
+                        <li class="price-info__item">
+                            Чат для общения и мощная мотивация
+                        </li>
+                        <li class="price-info__item">
+                            Чат по городам
+                        </li>
+                        <li class="price-info__item">
+                            Индивидуальный рацион в граммах
+                        </li>
+                        <li class="price-info__item">
+                            Поддержка куратора в личном кабинете
+                        </li>
+                        <li class="price-info__item">
+                            Телеграм-канал с полезной информацией от Валерии и Артема Чекалиных
+                        </li>
+                        <li class="price-info__item">
+                            Возможность выиграть призы за лучший результат
+                        </li>
+                    </ul>
+                    <div class="button__center">
+                        <a href="#" class="button">
+                            Продажи закрыты
+                        </a>
+                        <div style="margin: 2rem 0">
+                            <a href="#" target="_blank" class="footer-block__txt">
+                                <span>У вас есть вопросы?</span>
+                                <span>Напишите нам</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="price js-transform transform">
+                <div class="price__box-2"></div>
+                <div class="price__top price__top--2">
+                    <span class="price__logo"></span>
+                    <span class="price__name price__name--male">Мужской</span>
+                    <p class="price__cost">
+                        2700 <span>₽</span>
+                    </p>
+                </div>
+                <div class="price-info">
+                    <ul class="price-info__list">
+                        <li class="price-info__item">
+                            Удобная онлайн-платформа ChekFit
+                        </li>
+                        <li class="price-info__item">
+                            Длительность марафона - 4 недели
+                        </li>
+                        <li class="price-info__item">
+                            3 плана питания
+                        </li>
+                        <li class="price-info__item">
+                            Программа из функционально-силовых, интенсивных и жиросжигающих тренировок на все группы
+                            мышц для новичков и продвинутых.
+                        </li>
+                        <li class="price-info__item">
+                            Трекеры полезных привычек
+                        </li>
+                        <li class="price-info__item">
+                            Персональная поддержка куратора
+                        </li>
+                        <li class="price-info__item">
+                            Чат для общения и мощная мотивация
+                        </li>
+                        <li class="price-info__item">
+                            Чат по городам
+                        </li>
+                        <li class="price-info__item">
+                            Индивидуальный рацион в граммах
+                        </li>
+                        <li class="price-info__item">
+                            Поддержка куратора в личном кабинете
+                        </li>
+                        <li class="price-info__item">
+                            Телеграм-канал с полезной информацией от Валерии и Артема Чекалиных
+                        </li>
+                        <li class="price-info__item">
+                            Возможность выиграть призы за лучший результат
+                        </li>
+                    </ul>
+                    <div class="button__center">
+                        <a href="#" class="button">
+                            Продажи закрыты
+                        </a>
+                        <div style="margin: 2rem 0">
+                            <a href="#" target="_blank" class="footer-block__txt">
+                                <span>У вас есть вопросы?</span>
+                                <span>Напишите нам</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
