--- a/index.html
+++ b/index.html
@@ -486,6 +486,35 @@
         </div>
     </div>
 
+    <!-- FOOTER -->
+    <div class="container">
+        <div class="footer">
+            <div class="footer-block">
+                <p class="footer-block__txt">
+                    Техническая поддержка: <a href="mailto:info@lerchek.ru">example@example.ru</a>
+                </p>
+                <div class="footer-block__links">
+                    <a href="#" target="_blank" class="footer-block__txt">
+                        Контакты
+                    </a>
+                    <a href="#" target="_blank" class="footer-block__txt">
+                        Правила проведения марафона
+                    </a>
+                    <a href="#" target="_blank"
+                        class="footer-block__txt">
+                        Договор оферты
+                    </a>
+                    <a href="#" target="_blank" class="footer-block__txt">
+                        Политика конфиденциальности
+                    </a>
+                    <a href="#" target="_blank" class="footer-block__txt">
+                        Правила акции "Горы фортуны"
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
