--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     Алтайский дух свободы!
                 </p>
                 <div class="button__block">
-                    <a href="#" class="button js-scrollto">
+                    <a href="#prices" class="button js-scrollto">
                         Хочу на марафон
                     </a>
                 </div>
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class=" transform js-transform">
-                        <a href="#" class="button js-scrollto">
+                        <a href="#prices" class="button js-scrollto">
                             Участвовать в марафоне
                         </a>
                     </div>
@@ -162,11 +162,11 @@
     </div>
 
     <!-- CROUSEL -->
-    <div class="carousel">
+    <div class="carousel js-transform transform">
         <h3 class="title title--small title--center js-transform transform">
             Результаты участниц наших марафонов 💪
         </h3>
-        <div class="container-carousel">
+        <div class="container-carousel js-transform transform">
             <input type="radio" name="slider" id="item-1" checked>
             <input type="radio" name="slider" id="item-2">
             <input type="radio" name="slider" id="item-3">
@@ -292,8 +292,8 @@
             </div>
         </div>
     </div>
-    <div class="button__center">
-        <a href="#" class="button js-scrollto">
+    <div class="button__center js-transform transform">
+        <a href="#prices" class="button js-scrollto">
             Хочу на марафон
         </a>
     </div>
@@ -318,17 +318,17 @@
         </div>
     </div>
     <div class="button__center js-transform transform">
-        <a href="#" class="button js-scrollto">
+        <a href="#prices" class="button js-scrollto">
             Хочу на марафон c вами
         </a>
     </div>
 
     <!-- CROUSEL -->
-    <div class="carousel">
+    <div class="carousel js-transform transform">
         <h3 class="title title--small title--center js-transform transform">
             Отзывы участников
         </h3>
-        <div class="container-carousel">
+        <div class="container-carousel js-transform transform">
             <input type="radio" name="slider" id="review-item-1" checked>
             <input type="radio" name="slider" id="review-item-2">
             <input type="radio" name="slider" id="review-item-3">
@@ -515,6 +515,9 @@
         </div>
     </div>
 
+
+    <script src="scripts/jquery.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
