background videoo & text change & fixes

--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
 <body>
     <!-- BIG INFO -->
     <div class="info-big--wrapper">
+        <video autoplay muted id="myVideo">
+            <source src="images/IMG_9657.MOV" type="video/mp4">
+        </video>
         <div class="container">
             <div class="info-big">
                 <h1 class="title__white">
-                    Покори вершину горы
+                    7 Kunda - 10 montaj tehnikalar
                 </h1>
                 <p class="txt__white">
-                    Сделай свою жизнь более экологичной и осознанной, а тело стройнее и выносливее! Впитай в себя
-                    Алтайский дух свободы!
+                    REELS qilishni va eng qiyin montaj tehnikalarni  men bilan o'rganing!
                 </p>
                 <div class="button__block">
                     <a href="#prices" class="button js-scrollto">
-                        Хочу на марафон
+                        Men o'rganaman!
                     </a>
                 </div>
                 <div class="info-color__txt info-color__txt--white">
-                    Марафон « Madinasreels»
+                    Marafon «REELS MAKER 1.0»
                 </div>
             </div>
         </div>
@@ -38,28 +40,28 @@
             <div class="info-start__block">
                 <span class="info-start__block-icon"></span>
                 <p class="info-start__block-desc">
-                    Ближайший старт
+                    Boshlanish 
                 </p>
                 <p class="info-start__block-txt">
-                    12 сентября
+                    17 Oktyabr
                 </p>
             </div>
             <div class="info-start__block">
                 <span class="info-start__block-icon info-start__block-icon--2"></span>
                 <p class="info-start__block-desc">
-                    Длительность марафона
+                    Marafon davomiyligi
                 </p>
                 <p class="info-start__block-txt">
-                    4 недели
+                    7 kun 
                 </p>
             </div>
             <div class="info-start__block">
                 <span class="info-start__block-icon info-start__block-icon--3"></span>
                 <p class="info-start__block-desc">
-                    Подарки в акции “Покори Алтай"
+                    Hamma o’quvchilarga
                 </p>
                 <p class="info-start__block-txt">
-                    Всем участникам
+                    Darslaga mavjud 1 oy
                 </p>
             </div>
         </div>
@@ -192,7 +194,7 @@
         <h2 class="title title--eco title--center js-transform transform">
             Экопитание с заботой о здоровье и окружающей среде
         </h2>
-        <div class="eco js-transform transform">
+        <div class="eco">
             <div class="eco-blocks">
                 <div class="eco-block js-transform transform">
                     <div class="eco-block__num">
@@ -500,8 +502,7 @@
                     <a href="#" target="_blank" class="footer-block__txt">
                         Правила проведения марафона
                     </a>
-                    <a href="#" target="_blank"
-                        class="footer-block__txt">
+                    <a href="#" target="_blank" class="footer-block__txt">
                         Договор оферты
                     </a>
                     <a href="#" target="_blank" class="footer-block__txt">
