--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <!-- BIG INFO -->
     <div class="info-big--wrapper">
-        <video autoplay muted id="myVideo">
+        <!-- <video autoplay muted id="myVideo">
             <source src="images/IMG_9657.MOV" type="video/mp4">
-        </video>
+        </video> -->
         <div class="container">
             <div class="info-big">
                 <h1 class="title__white">
